No longer requirers <br> to make line breaks
Discord activity disabled until I can make it look better.

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                                 <p class="titleEmail">Email</p>
                             </div>
                             <p class="emailText">If you have an email client installed on your device, you can click on
-                                the "Send an email" button.<br> If you don't, simply send an email to this address:</p>
+                                the "Send an email" button. If you don't, simply send an email to this address:</p>
                             <p class="emailModalText">adnan@aridan.net</p>
                             <div class="buttonsEmail">
                                 <a class="socialMedia email" href="mailto:adnan@aridan.net">Send an email</a>
@@ -79,7 +79,7 @@
                     </div>
                     <div>
                         <p class="subTitle">Would you like to talk to me in a one-on-one? Go ahead and send me an email
-                            or an iMessage!<br>I'll be more than happy to reply and I'm looking forward to speaking with
+                            or an iMessage!I'll be more than happy to reply and I'm looking forward to speaking with
                             you!</p>
                         <div class="contactMe">
                             <div class="socialMedias">
@@ -93,10 +93,10 @@
                             </div>
                         </div>
                     </div>
-                    <br>
+                    
                     <div>
                         <p class="subTitle">Looking to communicate in a more casual manner? I'm on a bunch of social
-                            media platforms too! <br>Any account on any platform that isn't linked here is not me.</p>
+                            media platforms too! Any account on any platform that isn't linked here is not me.</p>
                         <div class="socialMedias">
                             <div>
                                 <a class="socialMedia instagram"
