--- a/experiences.html
+++ b/experiences.html
@@ -32,8 +32,8 @@
                         src="src/images/emojis/brain.svg"> Experiences</a>
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/tools.svg"> Projects</a>
-                        <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
-                            src="src/images/emojis/game.svg"> Minecraft</a>
+                <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/game.svg"> Minecraft</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
@@ -49,8 +49,8 @@
                         src="src/images/emojis/brain.svg"> Experiences</a>
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/tools.svg"> Projects</a>
-                        <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
-                            src="src/images/emojis/game.svg"> Minecraft</a>
+                <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/game.svg"> Minecraft</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
@@ -64,62 +64,67 @@
                 <div>
                     <h1>Experiences</h1>
                     <div>
-                        <p class="subTitle">I am quite early in to my career, but I've always had a liking for
-                            computers, networking and websites as far as I can remember. <br>Even when I was a child, I
-                            was always intrigued how computers could do and know so much whilst being so small.<br>
-                            Therefore, I know a lot about IT for my age, and I know that I can impress with my
-                            knowledge.</p>
-                        <div class="centerer">
-                            <div class="centererItems">
-                                <a href="cv" class="cvButton">Request CV/resume</a>
-                                <a class="socialMedia linkedin"
-                                    href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/" target="_blank">LinkedIn</a>
+                        <div class="centererWrapper">
+                            <div class="titleUnderText">
+                                <p class="subTitle">I am quite early in to my career, but I've always had a liking for
+                                    computers, networking and websites as far as I can remember. Even when I was a
+                                    child, I
+                                    was always intrigued how computers could do and know so much whilst being so small.
+                                    Therefore, I know a lot about IT for my age, and I know that I can impress with my
+                                    knowledge.</p>
                             </div>
-                        </div>
-                        <div>
-                            <div class="work" id="jobs">
+                            <div class="centerer">
+                                <div class="centererItems">
+                                    <a href="cv" class="cvButton">Request CV/resume</a>
+                                    <a class="socialMedia linkedin"
+                                        href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/"
+                                        target="_blank">LinkedIn</a>
+                                </div>
+                            </div>
                                 <p class="subTitleExp">Work Experience</p>
                                 <div class="project">
                                     <p class="projectName">Salesperson, technician and lead web developer at IT Care
                                         Repairstore</p>
-                                    <p class="projectDesc">This was my first job. I learned a lot during it and I can
-                                        honestly say it thought me a lot of life lessons that I needed to learn. <br>I
+                                    <p class="projectDesc">This was my first job. I learned a lot during it and I
+                                        can
+                                        honestly say it thought me a lot of life lessons that I needed to learn. I
                                         learned how to communicate and work as a team, how to professionally repair
-                                        technology and how to be a good salesperson.<br> It was a real thrill working
+                                        technology and how to be a good salesperson. It was a real thrill working
                                         there!</p>
                                     <div class="projectStuff">
                                         <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/clock.svg"><br>Nov 2022 - Oct 2023</p>
+                                                src="src/images/emojis/clock.svg"><br> Nov 2022 - Oct 2023
+                                        </p>
                                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/link.svg"><br> <a
-                                                href="https://itcarestore.se" target="_blank">itcarestore.se</a></p>
+                                                src="src/images/emojis/link.svg"><br> <a href="https://itcarestore.se"
+                                                target="_blank">itcarestore.se</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"><br>Web Development <br>Customer
+                                                src="src/images/emojis/teacher.svg"><br> Web Development <br>Customer
                                             Service <br>Tech Repairs</p>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="education" id="education">
                                 <p class="subTitleExp">Education</p>
                                 <div class="project">
                                     <p class="projectName">Networking and computer science student at Teknikum </p>
                                     <p class="projectDesc">During my time at Teknikum, I got to learn the basics of
-                                        networking in regard to routing and switching. <br>I also got to learn how to
-                                        build computers, use virtual machines, manage servers that run on Windows Server
-                                        along with a <br>basic course in network security, electronics and web development!
+                                        networking in regard to routing and switching. I also got to learn how to
+                                        build computers, use virtual machines, manage servers that run on Windows
+                                        Server
+                                        along with a basic course in network security, electronics and web
+                                        development!
                                     </p>
                                     <div class="projectStuff">
                                         <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/clock.svg"><br>Aug 2020 - Jun 2023</p>
-                                                <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                    src="src/images/emojis/link.svg"><br> <a
-                                                    href="https://teknikum.se" target="_blank">teknikum.se</a></p>
+                                                src="src/images/emojis/clock.svg"><br> Aug 2020 - Jun 2023
+                                        </p>
+                                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/link.svg"><br> <a href="https://teknikum.se"
+                                                target="_blank">teknikum.se</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"><br>Networking <br>Computers <br>Web
+                                                src="src/images/emojis/teacher.svg"><br>Networking <br>Computers<br> Web
                                             Development <br>Electronics</p>
                                     </div>
                                 </div>
-                            </div>
                         </div>
                     </div>
                 </div>
