--- a/mc.html
+++ b/mc.html
@@ -76,7 +76,7 @@
                     <h1 class="mcFont">Minecraft</h1>
                     <div class="centerer">
                         <div class="centerer">
-                            <p class="mcFont subTitle">Want to play on a Minecraft server where everyone treats everyone with respect, <br>where everyone helps each other and run a simple survival server without too many mods? <br>Look no further! Come join us! <br>The server is ran on Java, but we have a plugin that lets Bedrock players join too!</p>
+                            <p class="mcFont subTitle">Want to play on a Minecraft server where everyone treats everyone with respect, where everyone helps each other and run a simple survival server without too many mods? Look no further! Come join us! The server is ran on Java, but we have a plugin that lets Bedrock players join too!</p>
                             <p class="mcFont subTitle">(you need to wait for an admin or the owner to join in order to grant you permissions to 
                                 build and similar)</p>
                         </div>
@@ -91,14 +91,14 @@
                                 
                                 <div id="java" class="hide">
                                     <p>To join on Java, use this:
-                                       <br> Address: mc.aridan.net
+                                        Address: mc.aridan.net
                                     </p>
                                 </div>
                                 <div id="bedrock" class="hide">
                                     <p>
                                         To join on Bedrock, use this:
-                                        <br> Address: mc.aridan.net
-                                        <br> Port: 25609
+                                         Address: mc.aridan.net
+                                         Port: 25609
                                     </p>
                                 </div>
 
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                         <p class="mcFont subTitle">(don't worry, your computer will download this when you enter the
-                            <br>server, this is just if you want to use it on your own worlds)</p>
+                            server, this is just if you want to use it on your own worlds)</p>
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
     <footer>
         <div class="footer">
             <p class="mcFont">© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT
-                license.<br>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0. <br>Font and background image are
+                license.Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0. Font and background image are
                 from <a class="mcFont" href="https://faithfulpack.net/">Faithful</a>.</p>
         </div>
     </footer>
