--- a/settings.html
+++ b/settings.html
@@ -128,12 +128,12 @@
                     <div>
                         <div id="failSave" class="savedMessage failed">
                             <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
-                            Failed to save settings.<br>Try again.
+                            Failed to save settings.Try again.
                         </div>
             
                         <div id="sucessfullSave" class="savedMessage sucessfull">
                             <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
-                            Settings saved successfully!<br>Refresh to apply.
+                            Settings saved successfully!Refresh to apply.
                         </div>
                     </div>
                 </div>
