--- a/sv/contact.html
+++ b/sv/contact.html
@@ -62,7 +62,7 @@
                                 <p class="titleEmail">E-post</p>
                             </div>
                             <p class="emailText">Om du har en e-post klient installerad på din enhet kan du klicka på
-                                 "Skicka ett mejl" knappen.<br> Annars kan du skicka ditt mejl hit:</p>
+                                 "Skicka ett mejl" knappen. Annars kan du skicka ditt mejl hit:</p>
                             <p class="emailModalText">adnan@aridan.net</p>
                             <div class="buttonsEmail">
                                 <a class="socialMedia email" href="mailto:adnan@aridan.net">Skicka ett mejl</a>
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     <div>
-                        <p class="subTitle">Vill du prata med mig en-mot-en? Skicka ett e-postmeddelande eller ett iMessage till mig, jag bits inte!<br>Jag svarar mer än gärna och jag ser fram emot att prata med dig!</p>
+                        <p class="subTitle">Vill du prata med mig en-mot-en? Skicka ett e-postmeddelande eller ett iMessage till mig, jag bits inte!Jag svarar mer än gärna och jag ser fram emot att prata med dig!</p>
                         <div class="contactMe">
                             <div class="socialMedias">
                                 <div>
@@ -83,9 +83,9 @@
                             </div>
                         </div>
                     </div>
-                    <br>
+                    
                     <div>
-                        <p class="subTitle">Vill du snacka på ett mindre formellt sätt? Jag är också på en massa sociala medier! <br>Ser du en profil som inte är länkad här så är det inte jag.</p>
+                        <p class="subTitle">Vill du snacka på ett mindre formellt sätt? Jag är också på en massa sociala medier! Ser du en profil som inte är länkad här så är det inte jag.</p>
                         <div class="socialMedias">
                             <div>
                                 <a class="socialMedia instagram"
