--- a/sv/settings.html
+++ b/sv/settings.html
@@ -124,12 +124,12 @@
                     <div>
                         <div id="failSave" class="savedMessage failed">
                             <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
-                            Dina inställningar kunde inte sparas.<br>Försök igen.
+                            Dina inställningar kunde inte sparas.Försök igen.
                         </div>
             
                         <div id="sucessfullSave" class="savedMessage sucessfull">
                             <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
-                            Dina inställningar sparades!<br>Ladda om för att verkställa.
+                            Dina inställningar sparades!Ladda om för att verkställa.
                         </div>
                     </div>
                 </div>
