--- a/sv/index.html
+++ b/sv/index.html
@@ -58,7 +58,7 @@
                     <h1>Hem</h1>
                     <div class="centerer">
                         <div class="centererItems">
-                            <p>Hallå där! Välkommen till min webbsida!  Jag använder denna webbsida mestadels för att visa rekryterare mina kompetenser och min kontaktinformation.<br>Jag hoppas att du kommer att trivas här. Jag skulle ge dig några cookies (kakor) men jag respekterar din integritet, så kanske en annan gång?</p>
+                            <p>Hallå där! Välkommen till min webbsida!  Jag använder denna webbsida mestadels för att visa rekryterare mina kompetenser och min kontaktinformation.Jag hoppas att du kommer att trivas här. Jag skulle ge dig några cookies (kakor) men jag respekterar din integritet, så kanske en annan gång?</p>
                         </div>
                     </div>
                     <div>
@@ -67,14 +67,14 @@
                             </p>
                             <div class="project">
                                 <p class="projectName">Adnan Bukvic, även känd som @actuallyaridan</p>
-                                <p class="projectDesc">Jag är en kreativ kille som älskar att skapa nya lösningar för gamla saker.<br> Jag älskar att lära mig nya saker och jag har gillat datorer, telefoner och nätverk ända sedan jag var ett barn.<br>Jag är alltid uppdaterad om deras mjukvara och hårdvara. Jag gillar till och med att modifiera elektronik för att göra nya saker, som gamla kablar<br>
+                                <p class="projectDesc">Jag är en kreativ kille som älskar att skapa nya lösningar för gamla saker. Jag älskar att lära mig nya saker och jag har gillat datorer, telefoner och nätverk ända sedan jag var ett barn.Jag är alltid uppdaterad om deras mjukvara och hårdvara. Jag gillar till och med att modifiera elektronik för att göra nya saker, som gamla kablar
                                     och tillbehör som iPods och jag kan en massa språk också!</p>
                                 <div class="projectStuff">
                                     <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                            src="../src/images/emojis/clock.svg"><br>19 år gammal</p>
+                                            src="../src/images/emojis/clock.svg">19 år gammal</p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="../src/images/emojis/globe.svg"><br><span class="langProf">flytande:</span><br> svenska, engelska
-                                        <br><span class="langProf">pratar:</span><br> bosniska, kroatiska, serbiska</p>
+                                            src="../src/images/emojis/globe.svg"><span class="langProf">flytande:</span> svenska, engelska
+                                        <span class="langProf">pratar:</span> bosniska, kroatiska, serbiska</p>
                                 </div>
                             </div>
                         </div>
