--- a/sv/projects.html
+++ b/sv/projects.html
@@ -61,15 +61,15 @@
                     <h1>Projekt</h1>
                     <div>
                         <div>
-                            <p class="subTitle">Jag har massor av olika projekt som jag håller på med ibland. <br>Vissa
-                                av dem är tekniska och andra är mjukvarurelaterade eller webbsidor och liknande. <br>Ta och
+                            <p class="subTitle">Jag har massor av olika projekt som jag håller på med ibland. Vissa
+                                av dem är tekniska och andra är mjukvarurelaterade eller webbsidor och liknande. Ta och
                                 kika på dem! Jag slår vad att du kommer gilla i alla fall en av dem. I vilket fall så
                                 hade jag kul när jag skapade dem!
                                 <img draggable="false" class="emoji" alt="" src="../src/images/emojis/happy.svg">
                             </p>
                             <div class="project">
                                 <p class="projectName">Den där webbsidan (aridan.net)</p>
-                                <p class="projectDesc">Denna webbsidan innehåller alla mina länkar till mina konton på sociala medier och liknande samt min arbetslivserfarenhet. <br>Jag lär mig ständigt nya saker genom denna webbsida, men mestadels hur man kan få webbsidor se bra ut!</p>
+                                <p class="projectDesc">Denna webbsidan innehåller alla mina länkar till mina konton på sociala medier och liknande samt min arbetslivserfarenhet. Jag lär mig ständigt nya saker genom denna webbsida, men mestadels hur man kan få webbsidor se bra ut!</p>
                                 <div>
                                     <p class="projectStatus WIP">Pågår</p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
@@ -87,7 +87,7 @@
                             </div>
                             <div class="project">
                                 <p class="projectName">Den svenska översättningen av OldTwitter</p>
-                                <p class="projectDesc">OldTwitter är ett tillägg för Chrome och Firefox som gör så att X (tidigare Twitter) ser ut som Twitter från 2016/2018. <br>Jag behöver aktivt översätta tillägget till svenska och själv tycker jag att jag gör ett ganska bra jobb!</p>
+                                <p class="projectDesc">OldTwitter är ett tillägg för Chrome och Firefox som gör så att X (tidigare Twitter) ser ut som Twitter från 2016/2018. Jag behöver aktivt översätta tillägget till svenska och själv tycker jag att jag gör ett ganska bra jobb!</p>
                                 <div>
                                     <p class="projectStatus WIP">Pågår</p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
@@ -104,7 +104,7 @@
                             </div>
                             <div class="project">
                                 <p class="projectName">iPod Video 5th Gen</p>
-                                <p class="projectDesc">Jag gillar att modifiera äldre iPods. Denna iPod har jag lagt en genomskinlig framsida samt klickhjul på.<br>Dessutom så bytte jag utt batteriet mot en större variant och bytte ut hårddisken med ett SD kort.</p>
+                                <p class="projectDesc">Jag gillar att modifiera äldre iPods. Denna iPod har jag lagt en genomskinlig framsida samt klickhjul på.Dessutom så bytte jag utt batteriet mot en större variant och bytte ut hårddisken med ett SD kort.</p>
                                 <div>
                                     <p class="projectStatus completed">Färdigt</p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
@@ -122,7 +122,7 @@
                             </div>
                             <div class="project">
                                 <p class="projectName">iPod Mini 2nd Gen </p>
-                                <p class="projectDesc">Denna iPod modifierade jag med ett nytt batteri och ett Compact Flash kort. <br>Visste du att iPod mini serien använder Microdrives, en hårddiskstandard som har exakt samma kontakter som Compact Flash?</p>
+                                <p class="projectDesc">Denna iPod modifierade jag med ett nytt batteri och ett Compact Flash kort. Visste du att iPod mini serien använder Microdrives, en hårddiskstandard som har exakt samma kontakter som Compact Flash?</p>
                                     <div>
                                         <p class="projectStatus completed">Färdigt</p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
@@ -131,7 +131,7 @@
                             </div>
                             <div class="project">
                                 <p class="projectName">"Hackintoshing"</p>
-                                <p class="projectDesc">"Hackintoshing" är att installera macOS på icke-Apple hårdvara. <br>Detta gjorde jag som ett hobbyprojekt, men samtidigt så lärde jag lärde mig massor om hur Apples klientoperativsystem fungerar. <br>Det var superkul, och den startar till macOS än idag!</p>
+                                <p class="projectDesc">"Hackintoshing" är att installera macOS på icke-Apple hårdvara. Detta gjorde jag som ett hobbyprojekt, men samtidigt så lärde jag lärde mig massor om hur Apples klientoperativsystem fungerar. Det var superkul, och den startar till macOS än idag!</p>
                                     <div>
                                         <p class="projectStatus completed">Färdigt</p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
