Revert "Now using iframe to show world"
This reverts commit 1fefcf5820f7340e437d09e46b87241121f9f789.

--- a/mc.html
+++ b/mc.html
@@ -81,7 +81,8 @@
                                 build and similar)</p>
                         </div>
                         <div id="wrapperMc">
-                            <iframe class="imgWorld" src="http://mc.aridan.net:8172/#world:-1556:0:-424:1500:0:0:0:0:perspective" title="bruh"></iframe>
+                                <img class="imgWorld" src="src/images/world.png"
+                                    alt="A screenshot of the Minecraft world">
 
                                 <div id="mcJoinButtons">
                                     <button id="javaButton" class="mc mcMenu green" onclick="showJava()">Java</button>
@@ -100,8 +101,8 @@
                                          Port: 25609
                                     </p>
                                 </div>
+
                         </div>
-                        
                         <div>
                             <div id="admins">
 
