Replaced world photo

--- a/mc.html
+++ b/mc.html
@@ -74,8 +74,8 @@
             <div class="constructionBox">
                 <div>
                     <h1 class="mcFont">Minecraft</h1>
-                    <div class="centerer">
-                        <div class="centerer">
+                    <div class="centererWrapper">
+                        <div class="titleUnderText">
                             <p class="mcFont subTitle">Want to play on a Minecraft server where everyone treats everyone with respect, where everyone helps each other and run a simple survival server without too many mods? Look no further! Come join us! The server is ran on Java, but we have a plugin that lets Bedrock players join too!</p>
                             <p class="mcFont subTitle">(you need to wait for an admin or the owner to join in order to grant you permissions to 
                                 build and similar)</p>
